--- a/client/src/app/component/maj-version/maj-version.html
+++ b/client/src/app/component/maj-version/maj-version.html
@@ -47,43 +47,49 @@
             <input id="commit-message" type="text" formControlName="commitMessage"/>
           </div>
 
-        </form>
 
-        <div>
+          <div>
 
-          <table class="table">
-            <thead>
-            <tr>
-              <th scope="col">Nom fichier</th>
-              <th scope="col">Contenu</th>
-            </tr>
-            </thead>
-            <tbody>
+            <table class="table">
+              <thead>
+              <tr>
+                <th scope="col">Nom fichier</th>
+                <th scope="col">Contenu</th>
+              </tr>
+              </thead>
+              <tbody>
 
-              @for (fichier of fichierAModifier; track $index) {
+                @for (fichier of fichierAModifier; track $index) {
 
-                <tr>
-                <td>{{fichier.nomFichier}}</td>
+                  <tr>
+                  <td>{{fichier.nomFichier}}</td>
 
-                  <td>
-                @for (ligne of fichier.lignes | keyvalue: null; track ligne.key) {
-                  @let ligne2=ligne.value;
-                  <span>{{ligne.key}}</span>
-                  @if (ligne2.trouve) {
-                    <span>X</span>
+                    <td>
+                  @for (ligne of fichier.lignes | keyvalue: null; track ligne.key) {
+                    @let ligne2=ligne.value;
+                    <span>{{ligne.key}}</span>
+                    @if (ligne2.trouve) {
+<!--                      <span>X</span>-->
+                      @if(ligne2.nomForm){
+                        <input class="form-check-input" type="checkbox" value="1" [id]="'cbl'+ligne2.nomForm"
+                             [name]="ligne2.nomForm" [formControlName]="ligne2.nomForm">
+                      }
+                    }
+                    <span class="formatted">{{ligne2.contenu}}</span><br/>
                   }
-                  <span class="formatted">{{ligne2.contenu}}</span><br/>
+                    </td>
+
+                  </tr>
                 }
-                  </td>
-
-                </tr>
-              }
 
 
-            </tbody>
-          </table>
+              </tbody>
+            </table>
 
-        </div>
+          </div>
+
+
+        </form>
 
       </div>
       <div class="modal-footer">
