ajout d'un control pour la validation du changement de version

--- a/client/src/app/component/maj-version/maj-version.html
+++ b/client/src/app/component/maj-version/maj-version.html
@@ -95,7 +95,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="enregistrer($event)">Save changes</button>
+        <button type="button" class="btn btn-primary" (click)="enregistrer($event)" [disabled]="myForm.invalid">Save changes</button>
       </div>
     </div>
   </div>
