nettoyage du code

--- a/client/src/app/component/run/run.html
+++ b/client/src/app/component/run/run.html
@@ -3,7 +3,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Liste des dépendances</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">{{titre}}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -19,7 +19,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-<!--        <button type="button" class="btn btn-primary" (click)="enregistrer($event)">Save changes</button>-->
       </div>
     </div>
   </div>
