--- a/client/src/app/component/select-run/select-run.html
+++ b/client/src/app/component/select-run/select-run.html
@@ -4,7 +4,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Liste des dépendances</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Sélection de la commande</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -27,7 +27,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="executer($event)" [disabled]="formGrouId3.invalid">Save changes</button>
+        <button type="button" class="btn btn-primary" (click)="executer($event)" [disabled]="formGrouId3.invalid">Execution</button>
       </div>
     </div>
   </div>
